# AMIE-APO-Quant-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  walkthrough.md
.github/workflows/: test.yml
data/liquidity/: SPY_liquidity.parquet  ^TNX_liquidity.parquet
data/portfolio/: latest_allocation.parquet
data/processed/: SPY_l2.parquet  SPY_ohlcv.parquet  ^TNX_l2.parquet  ^TNX_ohlcv.parquet
data/regime/: SPY_regimes.parquet  ^TNX_regimes.parquet
docs/: architecture.md
grafana/: dashboard.json
reports/: requirements.txt  test_api_fail.txt  test_output.txt  test_output_apo.txt  test_output_apo_utf8.txt  test_output_utf8.txt
scripts/: benchmark_cpp_vs_numba.py  benchmark_data_layer.py  diagnostics.py  generate_demo_snapshots.py  profile_system.py  report_generator.py  run_amie_apo.py  run_pipeline.py  validate_alpaca.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_amis.py  test_api.py  test_backtester.py  test_broker_integration.py  test_cache_manager.py  test_data_layer.py  test_data_pipeline.py  test_distributed_cluster.py  test_execution.py  test_failure.py  test_integration.py  test_liquidity.py  test_liquidity_engine.py  test_metrics_consistency.py  test_numba_solver.py  test_optimizer.py  test_order_manager.py  test_performance.py  test_portfolio_optimizer.py  test_regime.py  test_regime_detection.py  test_resilience.py  test_risk_guard.py  test_state_manager.py  test_system_grade.py  test_volatility.py  test_volatility_engine.py
(+42 files in other folders)
